<resources>
    <string name="app_name">ciphrchat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="send">Send</string>
    <string name="conversations">Conversations</string>
    <string name="online_users">Online Users</string>
    <string name="notifications">Notifications</string>
    <string name="message">Message</string>
</resources>