<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui_layer.auth.login.LoginFragment">

    <TextView
        android:id="@+id/loginFragment_textView_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/welcome_back"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginFragment_textView_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginFragment_textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#888888"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/loginFragment_editText_password"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginFragment_textView_username" />

    <Button
        android:id="@+id/loginFragment_button_submit"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="14dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginFragment_editText_password" />

</androidx.constraintlayout.widget.ConstraintLayout>